# Netsuite-Agent

./: .env.example  .gitignore  README.md  agent.py  customer_analytics.py  netsuite_client.py  pyproject.toml  report_generator.py  requirements.txt  web_app.py
static/css/: style.css
static/js/: app.js
templates/: index.html
